// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swagger integration OpenSpec should swagger spec 2 1`] = `
Object {
  "consumes": Array [
    "application/json",
  ],
  "definitions": Object {
    "Calendar": Object {
      "properties": Object {
        "id": Object {
          "type": "string",
        },
        "name": Object {
          "minLength": 1,
          "type": "string",
        },
      },
      "required": Array [
        "name",
      ],
      "type": "object",
    },
  },
  "info": Object {
    "title": "Swagger title",
    "version": "1.2.0",
  },
  "paths": Object {
    "/rest/calendars": Object {
      "get": Object {
        "operationId": "CalendarsController_getAll",
        "parameters": Array [],
        "produces": Array [
          "application/json",
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
            "schema": Object {
              "items": Object {
                "$ref": "#/definitions/Calendar",
              },
              "type": "array",
            },
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": Object {
      "post": Object {
        "consumes": Array [
          "text/plain",
        ],
        "operationId": "CalendarsController_csv",
        "parameters": Array [
          Object {
            "in": "body",
            "name": "body",
            "required": false,
            "schema": Object {
              "type": "string",
            },
          },
        ],
        "produces": Array [
          "text/plain",
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
            "schema": Object {
              "type": "string",
            },
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": Object {
      "get": Object {
        "description": "Events",
        "operationId": "EventCtrl_get",
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": Object {
      "get": Object {
        "operationId": "CalendarsController_get",
        "parameters": Array [
          Object {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "pattern": "^[0-9a-fA-F]{24}$",
            "required": true,
            "type": "string",
          },
        ],
        "produces": Array [
          "application/json",
        ],
        "responses": Object {
          "200": Object {
            "description": "Success",
            "schema": Object {
              "$ref": "#/definitions/Calendar",
            },
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
  },
  "produces": Array [
    "application/json",
  ],
  "swagger": "2.0",
  "tags": Array [
    Object {
      "name": "CalendarsController",
    },
    Object {
      "name": "EventCtrl",
    },
  ],
}
`;

exports[`Swagger integration OpenSpec should swagger spec 3 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "Calendar": Object {
        "properties": Object {
          "id": Object {
            "type": "string",
          },
          "name": Object {
            "minLength": 1,
            "type": "string",
          },
        },
        "required": Array [
          "name",
        ],
        "type": "object",
      },
    },
  },
  "info": Object {
    "title": "Api documentation",
    "version": "1.0.0",
  },
  "openapi": "3.0.1",
  "paths": Object {
    "/rest/calendars": Object {
      "get": Object {
        "operationId": "CalendarsController__getAll",
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "items": Object {
                    "$ref": "#/components/schemas/Calendar",
                  },
                  "type": "array",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/csv": Object {
      "post": Object {
        "operationId": "CalendarsController__csv",
        "parameters": Array [],
        "requestBody": Object {
          "content": Object {
            "text/plain": Object {
              "schema": Object {
                "type": "string",
              },
            },
          },
          "required": false,
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text/plain": Object {
                "schema": Object {
                  "type": "string",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
    "/rest/calendars/events": Object {
      "get": Object {
        "description": "Events",
        "operationId": "EventCtrl__get",
        "parameters": Array [],
        "responses": Object {
          "200": Object {
            "description": "Success",
          },
        },
        "tags": Array [
          "EventCtrl",
        ],
      },
    },
    "/rest/calendars/{id}": Object {
      "get": Object {
        "operationId": "CalendarsController__get",
        "parameters": Array [
          Object {
            "description": "An ObjectID",
            "in": "path",
            "name": "id",
            "required": true,
            "schema": Object {
              "example": "5ce7ad3028890bd71749d477",
              "pattern": "^[0-9a-fA-F]{24}$",
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/Calendar",
                },
              },
            },
            "description": "Success",
          },
        },
        "tags": Array [
          "CalendarsController",
        ],
      },
    },
  },
  "tags": Array [
    Object {
      "name": "CalendarsController",
    },
    Object {
      "name": "EventCtrl",
    },
  ],
}
`;
